# wasm-gol

./: .gitignore  .rsw.json  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: deploy.yml
assets/: gol-backend_bg.13df3d1e.wasm  gol-backend_bg.13f4a9a1.wasm  gol-backend_bg.15dd7a4d.wasm  gol-backend_bg.295eb7cf.wasm  gol-backend_bg.659f9f33.wasm  gol-backend_bg.aeff0663.wasm  gol-backend_bg.be40689a.wasm  gol-backend_bg.c4764aad.wasm  gol-backend_bg.cc1ac28d.wasm  gol-backend_bg.f761bd21.wasm  index.0330e277.js  index.0a70093f.js  index.1392b15d.css  index.1cf3b7a2.js  index.254d0e38.js  index.2e0be36f.js  index.2f0b6c13.css  index.4fbcf2a6.js  index.5188bc63.css  index.61b40edd.js  index.6312a372.css  index.8722e1cf.js  index.f576de4d.js  index.fa192e91.js  index.fe8b3dc5.js
gol-backend/: Cargo.toml
gol-backend/src/: lib.rs
src/: main.ts
src/styles/: main.css  main.scss
