[package]
name = "gol-backend"
license = "MIT"
version = "1.0.0"
authors = ["Mikołaj Rosowski <m.rosowski1@wp.pl>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
console_error_panic_hook = { version = "0.1.7", optional = true }

# Requires nightly
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
